--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: opx auto;
+}
+
+.food-item {
+    background-color: dimgray;
+}
+
+.orange {
+    color: orange;
+    font-size: 50px;
+}
+
+.link-btn {
+    text-decoration: none;
+    background-image: linear-gradient(orange, tomato);
+    font-weight: 700;
+
+    padding: 10px 40px;
+    border-radius: 15px;
+
+
+}
+
+section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding: 3%;
+}
+
+.half-width img {
+    width: 85%;
 }
