--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
 section {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -34,4 +35,9 @@ section {
 
 .half-width img {
     width: 85%;
+}
+
+.about-me {
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
 }
