--- a/style.css
+++ b/style.css
@@ -41,3 +41,34 @@ section {
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
 }
+
+.text-1 {
+    text-align: center;
+}
+
+.text-2 {
+    text-align: center;
+}
+
+.asd {
+    text-align: center;
+}
+
+.lorem {
+    padding-left: 20px;
+    text-align: left;
+}
+
+.Recipie-1 {
+    box-shadow: 15px 15px 50px gray;
+    width: 45%;
+    margin-left: 5%;
+    margin-right: 5%;
+
+    border-radius: 15px;
+}
+
+.Recipie-1 img {
+    width: 80%;
+    padding: 5%;
+}
