--- a/style.css
+++ b/style.css
@@ -64,11 +64,44 @@ section {
     width: 45%;
     margin-left: 5%;
     margin-right: 5%;
-
     border-radius: 15px;
+    border-top: 5px solid rgb(41, 6, 196);
+    border-left: 5px solid rgb(41, 6, 196);
 }
 
 .Recipie-1 img {
     width: 80%;
     padding: 5%;
+}
+
+.social {
+    display: flex;
+    box-shadow: 10px 10px 45px gray;
+
+}
+
+.alada {
+    box-shadow: 10px 10px 45px gray;
+    width: 32%;
+    margin-left: 2%;
+    margin-right: 2%;
+    border-radius: 15px;
+
+}
+
+#hobe {
+    background-color: black;
+    text-align: center;
+}
+
+.sada {
+    color: wheat;
+}
+
+.or {
+    color: orange;
+}
+
+.gray {
+    color: gray;
 }
